--- a/website/assets/reader.css
+++ b/website/assets/reader.css
@@ -378,6 +378,16 @@ button {
     /* Optional: Underline on hover */
 }
 
+/* ads */
+
+.evadav {
+    width: min(100%, 800px);
+    height: auto;
+    max-height: min(10vh,200px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
 
 /* for print */
 
@@ -390,6 +400,7 @@ button {
     .settings,
     .download,
     .edit,
+    .evadav,
     .change-ch {
         display: none !important;
     }
